--- a/index.html
+++ b/index.html
@@ -659,7 +659,6 @@ body.card-editor-active #addCard{
 .inv-name.consumable-name{display:flex;flex-direction:column;align-items:flex-start;gap:4px;min-width:0}
 .inv-name.consumable-name .cons-primary{display:flex;align-items:center;gap:6px;flex-wrap:nowrap;min-width:0}
 .inv-name.consumable-name .cons-name{display:block;font-weight:600;min-width:0;max-width:100%;overflow:hidden;text-overflow:ellipsis;white-space:nowrap;flex:1 1 auto}
-.inv-name.consumable-name .cons-chips{display:inline-flex;flex-wrap:nowrap;gap:6px;margin-left:6px;flex:0 0 auto}
 .inv-tools{display:flex;align-items:center;gap:6px;padding:0 var(--inv-row-padding-x)}
 .inv-row .delete-btn{display:none;margin-left:8px}
 .inv-row .icon-btn{width:var(--inv-control-height);height:var(--inv-control-height);padding:0}
@@ -704,10 +703,6 @@ body.card-editor-active #addCard{
 .cons-section-title{font-size:11px;font-weight:700;text-transform:uppercase;letter-spacing:.08em;color:var(--muted);padding:0 4px}
 .cons-sublist{display:flex;flex-direction:column;gap:6px}
 .cons-name{display:block;font-weight:600}
-.cons-chips{display:inline-flex;gap:6px;margin-left:6px;flex-wrap:wrap;align-items:center}
-.cons-chip{display:inline-flex;align-items:center;justify-content:center;padding:2px 6px;border-radius:999px;background:#eef4ff;color:#1e3a8a;font-size:10px;font-weight:600;text-transform:uppercase;letter-spacing:.08em}
-.cons-chip--potion{background:#fef3c7;color:#b45309}
-.cons-chip--scroll{background:#ede9fe;color:#5b21b6}
 .cons-secondary{display:block;margin-top:3px;font-size:11px;color:var(--muted);white-space:normal}
 .gifts-sublist{display:flex;flex-direction:column;gap:6px}
 .gifts-list-note{font-size:12px;color:var(--muted);padding:0 4px}
@@ -8178,63 +8173,8 @@ function saveCommon(k,list,{ applyMode='schedule' }={}){
 
 function parseConsumableName(s){ const t=String(s||'').trim(); const m=t.match(/^\((.*)\)$/); return m?{name:m[1].trim(),acquired:false}:{name:t,acquired:true}; }
 function formatConsumableDisplay(raw){
-  const original=String(raw||'').trim();
-  if(!original) return {label:'',chips:[]};
-  let working=original;
-  const chips=[];
-  const addChip=(chip)=>{ if(!chips.includes(chip)) chips.push(chip); };
-  const stripOuterParens=(str)=>{
-    let next=String(str||'').trim();
-    while(next.startsWith('(') && next.endsWith(')')){
-      const inner=next.slice(1,-1).trim();
-      if(!inner) break;
-      next=inner;
-    }
-    return next;
-  };
-  const stripLeadingSeparators=(str)=>String(str||'').replace(/^[\s,:;–—-]+/, '');
-
-  const hasSpellScroll=/spell\s*scroll/i.test(working);
-  if(hasSpellScroll){ addChip('Scroll'); }
-  else if(/^scrolls?\b/i.test(working)){ addChip('Scroll'); }
-
-  const potionPrefix=/^potion\b/i.test(working);
-  if(potionPrefix) addChip('Potion');
-
-  if(!/^spell\s*scrolls?\b/i.test(working)){
-    let match;
-    if((match=working.match(/^spell\s*\((.+)\)\s*$/i))){
-      working=match[1];
-    }else if((match=working.match(/^spell\s*(?:of\s+|[:–—-]\s*)(.+)$/i))){
-      working=match[1];
-    }else if(/^spell\b/i.test(working)){
-      working=working.replace(/^spell\b/i,'');
-      working=stripLeadingSeparators(working);
-    }
-  }
-
-  if(/^spell\s*scrolls?\b/i.test(working)){
-    working=working.replace(/^spell\s*scrolls?\b/i,'');
-    working=stripLeadingSeparators(working);
-    if(/^of\s+/i.test(working)) working=working.replace(/^of\s+/i,'');
-    working=stripOuterParens(working);
-  }else if(/^scrolls?\b/i.test(working)){
-    working=working.replace(/^scrolls?\b/i,'');
-    working=stripLeadingSeparators(working);
-    if(/^of\s+/i.test(working)) working=working.replace(/^of\s+/i,'');
-    working=stripOuterParens(working);
-  }
-
-  if(potionPrefix || /^potion\b/i.test(working)){
-    working=working.replace(/^potion\b/i,'');
-    working=stripLeadingSeparators(working);
-    if(/^of\s+/i.test(working)) working=working.replace(/^of\s+/i,'');
-    working=stripOuterParens(working);
-  }
-
-  working=stripOuterParens(working).trim();
-  if(!working) working=original;
-  return {label:working,chips};
+  const label=typeof raw==='string'?raw:String(raw||'');
+  return {label,chips:[]};
 }
 function deriveConsumableInventory(charKey){
   const ch=DATA.characters[charKey]; if (!ch || !ch.adventures) return new Map();
@@ -8872,26 +8812,13 @@ function openConsumableModal(charKey){
   const buildNameDiv=(name)=>{
     const nameDiv=document.createElement('div');
     nameDiv.className='inv-name consumable-name';
-    const {label:displayLabel,chips}=formatConsumableDisplay(name);
+    const {label:displayLabel}=formatConsumableDisplay(name);
     const primary=document.createElement('div');
     primary.className='cons-primary';
     const labelSpan=document.createElement('span');
     labelSpan.className='cons-name';
     labelSpan.textContent=displayLabel||name;
     primary.appendChild(labelSpan);
-    if(Array.isArray(chips) && chips.length){
-      const chipWrap=document.createElement('span');
-      chipWrap.className='cons-chips';
-      chips.forEach(chip=>{
-        const chipEl=document.createElement('span');
-        chipEl.className='cons-chip';
-        const slug=chip.toLowerCase().replace(/[^a-z0-9]+/g,'-').replace(/^-+|-+$/g,'');
-        if(slug){ chipEl.classList.add(`cons-chip--${slug}`); }
-        chipEl.textContent=chip;
-        chipWrap.appendChild(chipEl);
-      });
-      primary.appendChild(chipWrap);
-    }
     nameDiv.appendChild(primary);
     return {element:nameDiv,label:labelSpan.textContent};
   };
